Enhanced Features and components

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Classy HOMES Uganda - Deliver Amazing</title>
+    <title>Classy HOMES Uganda - Interior Design & Building Construction</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -51,10 +51,10 @@
         <div class="hero-container">
             <div class="hero-content">
                 <h1 class="hero-title">
-                    <span class="animate-text">Deliver</span>
-                    <span class="animate-text">Amazing</span>
+                    <span class="animate-text">Classy HOMES</span>
+                    <span class="animate-text">Uganda</span>
                 </h1>
-                <p class="hero-subtitle">Transforming spaces into dream homes with exceptional quality and innovative design</p>
+                <p class="hero-subtitle">Premier Interior Design & Building Construction Services - Transforming spaces into extraordinary living experiences</p>
                 <div class="hero-buttons">
                     <button class="btn btn-primary">Explore Our Work</button>
                     <button class="btn btn-secondary">Get Quote</button>
@@ -83,9 +83,11 @@
             </div>
             <div class="about-content">
                 <div class="about-text animate-on-scroll">
-                    <h3>Your Trusted Partner in Home Construction</h3>
-                    <p>With over 15 years of experience in Uganda's construction industry, Classy HOMES has established itself as a premier provider of residential construction and renovation services.</p>
-                    <p>We combine traditional craftsmanship with modern technology to deliver homes that exceed expectations in quality, design, and functionality.</p>
+                    <h3>Your Trusted Partner in Interior Design & Building Construction</h3>
+                    <p>Classy HOMES Uganda is a leading design and construction company specializing in creating exceptional interior spaces and innovative building designs across Uganda. With over 15 years of experience, we have established ourselves as the premier provider of comprehensive interior design and architectural solutions.</p>
+                    <p>Our expert team of interior designers, architects, and craftsmen work collaboratively to bring your vision to life, ensuring every project reflects your unique style and meets your functional needs. We specialize in residential interiors, commercial spaces, and custom building designs that combine aesthetics with practicality.</p>
+                    <p>From initial concept development and space planning to material selection and final implementation, we provide end-to-end interior design services. Our building design expertise includes architectural drawings, 3D visualizations, and construction management to ensure your project is completed to the highest standards.</p>
+                    <p>At Classy HOMES Uganda, we understand that great design is about more than just aesthetics - it's about creating spaces that enhance your lifestyle, improve productivity, and reflect your personality. Our commitment to excellence and attention to detail ensures every project we undertake exceeds expectations.</p>
                     <div class="stats">
                         <div class="stat">
                             <h4 class="stat-number" data-target="500">0</h4>
@@ -116,51 +118,51 @@
     <section id="services" class="services">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title animate-on-scroll">Our Services</h2>
-                <p class="section-subtitle animate-on-scroll">Comprehensive solutions for your dream home</p>
+                <h2 class="section-title animate-on-scroll">Our Design Services</h2>
+                <p class="section-subtitle animate-on-scroll">Comprehensive interior and building design solutions</p>
             </div>
             <div class="services-grid">
                 <div class="service-card animate-on-scroll">
                     <div class="service-icon">
-                        <i class="fas fa-building"></i>
+                        <i class="fas fa-couch"></i>
                     </div>
-                    <h3>New Construction</h3>
-                    <p>Complete home construction from foundation to finishing touches, tailored to your specifications and budget.</p>
-                </div>
-                <div class="service-card animate-on-scroll">
-                    <div class="service-icon">
-                        <i class="fas fa-paint-roller"></i>
-                    </div>
-                    <h3>Renovation & Remodeling</h3>
-                    <p>Transform your existing space with our expert renovation services, from minor updates to complete overhauls.</p>
+                    <h3>Interior Design</h3>
+                    <p>Complete interior design services including space planning, color consultation, furniture selection, and decorative elements to create beautiful and functional living spaces.</p>
                 </div>
                 <div class="service-card animate-on-scroll">
                     <div class="service-icon">
                         <i class="fas fa-drafting-compass"></i>
                     </div>
-                    <h3>Architectural Design</h3>
-                    <p>Custom architectural designs that blend aesthetics with functionality, creating spaces that inspire.</p>
+                    <h3>Building Design</h3>
+                    <p>Custom architectural designs and building plans that combine innovative concepts with practical functionality, tailored to your specific needs and location requirements.</p>
                 </div>
                 <div class="service-card animate-on-scroll">
                     <div class="service-icon">
-                        <i class="fas fa-hard-hat"></i>
+                        <i class="fas fa-cube"></i>
                     </div>
-                    <h3>Project Management</h3>
-                    <p>Professional project management ensuring timely completion and quality control throughout the construction process.</p>
+                    <h3>3D Visualization</h3>
+                    <p>Advanced 3D rendering and visualization services to help you see your design concepts before construction begins, ensuring complete satisfaction with the final result.</p>
                 </div>
                 <div class="service-card animate-on-scroll">
                     <div class="service-icon">
                         <i class="fas fa-palette"></i>
                     </div>
-                    <h3>Interior Design</h3>
-                    <p>Complete interior design services to create beautiful, functional living spaces that reflect your style.</p>
+                    <h3>Space Planning</h3>
+                    <p>Strategic space planning and layout optimization to maximize functionality and flow in both residential and commercial environments.</p>
                 </div>
                 <div class="service-card animate-on-scroll">
                     <div class="service-icon">
-                        <i class="fas fa-tools"></i>
+                        <i class="fas fa-ruler-combined"></i>
                     </div>
-                    <h3>Maintenance & Support</h3>
-                    <p>Ongoing maintenance services to keep your home in perfect condition long after construction is complete.</p>
+                    <h3>Custom Furniture</h3>
+                    <p>Design and fabrication of custom furniture pieces that perfectly complement your interior design and optimize your available space.</p>
+                </div>
+                <div class="service-card animate-on-scroll">
+                    <div class="service-icon">
+                        <i class="fas fa-project-diagram"></i>
+                    </div>
+                    <h3>Project Management</h3>
+                    <p>Complete project management services from concept to completion, ensuring your interior design or building project is delivered on time and within budget.</p>
                 </div>
             </div>
         </div>
@@ -174,32 +176,28 @@
                 <p class="section-subtitle animate-on-scroll">Showcasing our finest work</p>
             </div>
             <div class="portfolio-filter">
-                <button class="filter-btn active" data-filter="all">All</button>
-                <button class="filter-btn" data-filter="residential">Residential</button>
+                <button class="filter-btn active" data-filter="all">All Projects</button>
+                <button class="filter-btn" data-filter="interior">Interior Design</button>
+                <button class="filter-btn" data-filter="building">Building Design</button>
                 <button class="filter-btn" data-filter="commercial">Commercial</button>
-                <button class="filter-btn" data-filter="renovation">Renovation</button>
             </div>
             <div class="portfolio-grid">
-                <div class="portfolio-item animate-on-scroll" data-category="residential">
+                <div class="portfolio-item animate-on-scroll" data-category="interior">
                     <div class="portfolio-image">
-                        <div class="image-placeholder">
-                            <i class="fas fa-home"></i>
-                        </div>
+                        <img src="int1.jpeg" alt="Modern Living Room Design" class="portfolio-img">
                         <div class="portfolio-overlay">
-                            <h4>Modern Family Home</h4>
-                            <p>Kampala</p>
+                            <h4>Modern Living Room</h4>
+                            <p>Contemporary interior design with elegant furniture and lighting</p>
                             <button class="view-project">View Project</button>
                         </div>
                     </div>
                 </div>
-                <div class="portfolio-item animate-on-scroll" data-category="commercial">
+                <div class="portfolio-item animate-on-scroll" data-category="building">
                     <div class="portfolio-image">
-                        <div class="image-placeholder">
-                            <i class="fas fa-building"></i>
-                        </div>
+                        <img src="int2.jpeg" alt="Building Architecture Design" class="portfolio-img">
                         <div class="portfolio-overlay">
-                            <h4>Office Complex</h4>
-                            <p>Entebbe</p>
+                            <h4>Contemporary Building Design</h4>
+                            <p>Innovative architectural design with modern aesthetics</p>
                             <button class="view-project">View Project</button>
                         </div>
                     </div>
@@ -248,6 +246,18 @@
                         <div class="portfolio-overlay">
                             <h4>Eco-Friendly Home</h4>
                             <p>Buziga</p>
+                            <button class="view-project">View Project</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item animate-on-scroll" data-category="commercial">
+                    <div class="portfolio-image">
+                        <div class="image-placeholder">
+                            <i class="fas fa-building"></i>
+                        </div>
+                        <div class="portfolio-overlay">
+                            <h4>Modern Office Tower</h4>
+                            <p>Kampala Central</p>
                             <button class="view-project">View Project</button>
                         </div>
                     </div>
