Enhance footer visibility and add new images
- Fixed footer text visibility with high contrast colors and text shadows
- Enhanced footer logo visibility with brightness and glow effects
- Added new image to portfolio: Gemini_Generated_Image_6vef0n6vef0n6vef.png
- Added new image to About section: Gemini_Generated_Image_e84z9ie84z9ie84z.png
- Improved footer social media icon visibility
- Added hover effects for footer elements
- Enhanced about image styling with animations
- Updated portfolio with premium interior design project

--- a/index.html
+++ b/index.html
@@ -119,9 +119,7 @@
                 </div>
                 <div class="about-image animate-on-scroll">
                     <div class="image-frame">
-                        <div class="image-placeholder">
-                            <i class="fas fa-home"></i>
-                        </div>
+                        <img src="Gemini_Generated_Image_e84z9ie84z9ie84z.png" alt="Classy HOMES Uganda About" class="about-img">
                     </div>
                 </div>
             </div>
@@ -275,18 +273,18 @@
             <div class="portfolio-grid">
                 <div class="card animate-on-scroll" data-category="interior">
                     <div class="portfolio-image">
-                        <img src="int1.jpeg" alt="Modern Living Room Design" class="portfolio-img">
+                        <img src="Gemini_Generated_Image_6vef0n6vef0n6vef.png" alt="Premium Interior Design" class="portfolio-img">
                     </div>
                     <div class="card-body">
                         <div class="portfolio-header">
-                            <h4>Modern Living Room</h4>
+                            <h4>Premium Interior</h4>
                             <div class="portfolio-meta">
-                                <span class="meta-item"><i class="fas fa-clock"></i> 4 weeks</span>
-                                <span class="meta-item"><i class="fas fa-star"></i> 4.9</span>
-                                <span class="meta-item"><i class="fas fa-ruler"></i> 250m²</span>
+                                <span class="meta-item"><i class="fas fa-clock"></i> 6 weeks</span>
+                                <span class="meta-item"><i class="fas fa-star"></i> 5.0</span>
+                                <span class="meta-item"><i class="fas fa-ruler"></i> 300m²</span>
                             </div>
                         </div>
-                        <p>Contemporary interior design with elegant furniture and lighting</p>
+                        <p>Luxury interior design with premium materials and sophisticated finishes</p>
                     </div>
                     <div class="card-footer">
                         <button class="btn btn-primary">View Project</button>
