--- a/index.html
+++ b/index.html
@@ -136,6 +136,9 @@
             <div class="services-grid">
                 <div class="card animate-on-scroll">
                     <div class="card-body">
+                        <div class="service-image">
+                            <img src="Screenshot 2025-12-09 224801.png" alt="Interior Design Service" class="service-img">
+                        </div>
                         <div class="service-icon">
                             <i class="fas fa-couch"></i>
                         </div>
@@ -148,6 +151,9 @@
                 </div>
                 <div class="card animate-on-scroll">
                     <div class="card-body">
+                        <div class="service-image">
+                            <img src="Screenshot 2025-12-09 224743.png" alt="Building Design Service" class="service-img">
+                        </div>
                         <div class="service-icon">
                             <i class="fas fa-drafting-compass"></i>
                         </div>
@@ -160,11 +166,14 @@
                 </div>
                 <div class="card animate-on-scroll">
                     <div class="card-body">
-                        <div class="service-icon">
-                            <i class="fas fa-cube"></i>
+                        <div class="service-image">
+                            <img src="Screenshot 2025-12-09 224735.png" alt="Renovation Service" class="service-img">
                         </div>
-                        <h3>3D Visualization</h3>
-                        <p>Advanced 3D rendering and visualization services to help you see your design concepts before construction begins, ensuring complete satisfaction with the final result.</p>
+                        <div class="service-icon">
+                            <i class="fas fa-hammer"></i>
+                        </div>
+                        <h3>Renovation</h3>
+                        <p>Professional renovation services that transform existing spaces into modern, functional environments while preserving structural integrity and character.</p>
                     </div>
                     <div class="card-footer">
                         <button class="btn btn-primary">Learn More</button>
@@ -172,11 +181,14 @@
                 </div>
                 <div class="card animate-on-scroll">
                     <div class="card-body">
-                        <div class="service-icon">
-                            <i class="fas fa-palette"></i>
+                        <div class="service-image">
+                            <img src="Screenshot 2025-12-09 224749.png" alt="Consulting Service" class="service-img">
                         </div>
-                        <h3>Space Planning</h3>
-                        <p>Strategic space planning and layout optimization to maximize functionality and flow in both residential and commercial environments.</p>
+                        <div class="service-icon">
+                            <i class="fas fa-lightbulb"></i>
+                        </div>
+                        <h3>Consulting</h3>
+                        <p>Expert design consulting services to help you make informed decisions about your project, from initial concept development to final implementation.</p>
                     </div>
                     <div class="card-footer">
                         <button class="btn btn-primary">Learn More</button>
@@ -184,23 +196,29 @@
                 </div>
                 <div class="card animate-on-scroll">
                     <div class="card-body">
-                        <div class="service-icon">
-                            <i class="fas fa-ruler-combined"></i>
+                        <div class="service-image">
+                            <img src="Screenshot 2025-12-09 224725.png" alt="Project Management" class="service-img">
                         </div>
-                        <h3>Custom Furniture</h3>
-                        <p>Design and fabrication of custom furniture pieces that perfectly complement your interior design and optimize your available space.</p>
-                    </div>
-                    <div class="card-footer">
-                        <button class="btn btn-primary">Learn More</button>
-                    </div>
-                </div>
-                <div class="card animate-on-scroll">
-                    <div class="card-body">
                         <div class="service-icon">
                             <i class="fas fa-project-diagram"></i>
                         </div>
                         <h3>Project Management</h3>
-                        <p>Complete project management services from concept to completion, ensuring your interior design or building project is delivered on time and within budget.</p>
+                        <p>Comprehensive project management services ensuring your design project runs smoothly from start to finish, coordinating all aspects of construction and implementation.</p>
+                    </div>
+                    <div class="card-footer">
+                        <button class="btn btn-primary">Learn More</button>
+                    </div>
+                </div>
+                <div class="card animate-on-scroll">
+                    <div class="card-body">
+                        <div class="service-image">
+                            <img src="Screenshot 2025-12-09 224707.png" alt="Commercial Design" class="service-img">
+                        </div>
+                        <div class="service-icon">
+                            <i class="fas fa-building"></i>
+                        </div>
+                        <h3>Commercial Design</h3>
+                        <p>Specialized commercial design solutions for offices, retail spaces, and hospitality venues that optimize functionality while creating impressive customer experiences.</p>
                     </div>
                     <div class="card-footer">
                         <button class="btn btn-primary">Learn More</button>
@@ -382,6 +400,122 @@
                             </div>
                         </div>
                         <p>Sustainable building design with green materials</p>
+                    </div>
+                    <div class="card-footer">
+                        <button class="btn btn-primary">View Project</button>
+                    </div>
+                </div>
+            </div>
+                <!-- Additional Portfolio Items -->
+                <div class="card animate-on-scroll" data-category="interior">
+                    <div class="portfolio-image">
+                        <img src="int1.jpeg" alt="Modern Living Space" class="portfolio-img">
+                    </div>
+                    <div class="card-body">
+                        <div class="portfolio-header">
+                            <h4>Modern Living Space</h4>
+                            <div class="portfolio-meta">
+                                <span class="meta-item"><i class="fas fa-clock"></i> 4 weeks</span>
+                                <span class="meta-item"><i class="fas fa-star"></i> 4.9</span>
+                                <span class="meta-item"><i class="fas fa-ruler"></i> 250m²</span>
+                            </div>
+                        </div>
+                        <p>Contemporary living space with smart home features and premium finishes</p>
+                    </div>
+                    <div class="card-footer">
+                        <button class="btn btn-primary">View Project</button>
+                    </div>
+                </div>
+                <div class="card animate-on-scroll" data-category="building">
+                    <div class="portfolio-image">
+                        <img src="int2.jpeg" alt="Residential Complex" class="portfolio-img">
+                    </div>
+                    <div class="card-body">
+                        <div class="portfolio-header">
+                            <h4>Residential Complex</h4>
+                            <div class="portfolio-meta">
+                                <span class="meta-item"><i class="fas fa-clock"></i> 24 weeks</span>
+                                <span class="meta-item"><i class="fas fa-star"></i> 4.8</span>
+                                <span class="meta-item"><i class="fas fa-building"></i> 12 Units</span>
+                            </div>
+                        </div>
+                        <p>Multi-unit residential complex with modern amenities and green spaces</p>
+                    </div>
+                    <div class="card-footer">
+                        <button class="btn btn-primary">View Project</button>
+                    </div>
+                </div>
+                <div class="card animate-on-scroll" data-category="commercial">
+                    <div class="portfolio-image">
+                        <img src="int3.jpeg" alt="Restaurant Interior" class="portfolio-img">
+                    </div>
+                    <div class="card-body">
+                        <div class="portfolio-header">
+                            <h4>Restaurant Interior</h4>
+                            <div class="portfolio-meta">
+                                <span class="meta-item"><i class="fas fa-clock"></i> 8 weeks</span>
+                                <span class="meta-item"><i class="fas fa-star"></i> 4.7</span>
+                                <span class="meta-item"><i class="fas fa-utensils"></i> 80 Seats</span>
+                            </div>
+                        </div>
+                        <p>Elegant restaurant design with ambient lighting and modern kitchen layout</p>
+                    </div>
+                    <div class="card-footer">
+                        <button class="btn btn-primary">View Project</button>
+                    </div>
+                </div>
+                <div class="card animate-on-scroll" data-category="interior">
+                    <div class="portfolio-image">
+                        <img src="int4.jpeg" alt="Office Interior" class="portfolio-img">
+                    </div>
+                    <div class="card-body">
+                        <div class="portfolio-header">
+                            <h4>Corporate Office</h4>
+                            <div class="portfolio-meta">
+                                <span class="meta-item"><i class="fas fa-clock"></i> 6 weeks</span>
+                                <span class="meta-item"><i class="fas fa-star"></i> 4.9</span>
+                                <span class="meta-item"><i class="fas fa-users"></i> 50 Staff</span>
+                            </div>
+                        </div>
+                        <p>Modern corporate office with collaborative workspaces and ergonomic design</p>
+                    </div>
+                    <div class="card-footer">
+                        <button class="btn btn-primary">View Project</button>
+                    </div>
+                </div>
+                <div class="card animate-on-scroll" data-category="building">
+                    <div class="portfolio-image">
+                        <img src="int5.jpeg" alt="Villa Design" class="portfolio-img">
+                    </div>
+                    <div class="card-body">
+                        <div class="portfolio-header">
+                            <h4>Luxury Villa</h4>
+                            <div class="portfolio-meta">
+                                <span class="meta-item"><i class="fas fa-clock"></i> 20 weeks</span>
+                                <span class="meta-item"><i class="fas fa-star"></i> 5.0</span>
+                                <span class="meta-item"><i class="fas fa-home"></i> 500m²</span>
+                            </div>
+                        </div>
+                        <p>Luxury villa with infinity pool, garden, and panoramic city views</p>
+                    </div>
+                    <div class="card-footer">
+                        <button class="btn btn-primary">View Project</button>
+                    </div>
+                </div>
+                <div class="card animate-on-scroll" data-category="commercial">
+                    <div class="portfolio-image">
+                        <img src="int333.png" alt="Retail Store" class="portfolio-img">
+                    </div>
+                    <div class="card-body">
+                        <div class="portfolio-header">
+                            <h4>Retail Store</h4>
+                            <div class="portfolio-meta">
+                                <span class="meta-item"><i class="fas fa-clock"></i> 5 weeks</span>
+                                <span class="meta-item"><i class="fas fa-star"></i> 4.6</span>
+                                <span class="meta-item"><i class="fas fa-shopping-cart"></i> 200m²</span>
+                            </div>
+                        </div>
+                        <p>Modern retail store with optimized customer flow and display areas</p>
                     </div>
                     <div class="card-footer">
                         <button class="btn btn-primary">View Project</button>
